Replace commons.lang with plain java
commons-lang2 is provided by core. As it is deprecated use plain java.